--- a/chap7.tex
+++ b/chap7.tex
@@ -16,6 +16,10 @@
 \usepackage{mathalfa}
 \usepackage{enumitem}
 \usepackage{bm}
+\usepackage{relsize}
+\usepackage[figurename=图]{caption}
+\usepackage{chngcntr}
+\counterwithin{figure}{section}
 
 \usepackage{arydshln}
 \setlength{\dashlinegap}{2pt}
@@ -24,6 +28,10 @@
 \usepackage[ruled,linesnumbered,algosection]{algorithm2e}
 \renewcommand*{\algorithmcfname}{算法}
 \renewcommand*{\algorithmautorefname}{算法}
+
+\usepackage{tikz}
+\usetikzlibrary{trees,arrows.meta,decorations.pathmorphing,decorations.pathreplacing,shapes,shapes.geometric,backgrounds,positioning,calc,tikzmark,hobby,intersections}
+% \usepackage{tkz-euclide}
 
 \usepackage[slantfont,boldfont]{xeCJK}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -418,9 +426,46 @@ $k \gets 0.$\;
 & x_1 + 2x_2 - 6 \leqslant 0, \\
 & x_1 - 2x_2 -2 \leqslant 0, \\
 & -x_1 \leqslant 0, \\
-& -x_2 \leqslant 0.
+& -x_2 \leqslant 0,
 \end{array}
 \end{equation*}
+我们用积极集法进行求解.
+
+\begin{figure}
+\centering
+\begin{tikzpicture}[scale=1.8, circle defined by/.style args={center #1 and point #2}{insert path={let \p1=($(#2)-(#1)$),\n1={veclen(\x1,\y1)} in (#1) circle[radius=\n1]}}]
+\coordinate (C) at (1, 2.5);
+\draw[-{Stealth}] (-0.5, 0)--(5, 0) node [right] {$x$};
+\draw[-{Stealth}] (0, -0.5)--(0, 4.2) node [above] {$y$};
+\draw (0, 1) node (p1) [left] {$(0, 1)$} -- (2, 2) node (p2) [above] {$(2, 2)$} -- (4, 1) node (p3) [right] {$(4, 1)$} -- (2, 0) node (p4) [below] {$(2, 0)$};
+\node[below = -0.1 of p4] (x01) {$\V{x}^{(0)}, \V{x}^{(1)}$};
+\draw[dashed, line width=3] (2, 0) -- (1, 0) node (x23) [below] {$\V{x}^{(2)}, \V{x}^{(3)}$};
+\path[name path = line1] (0, 1) -- (2, 2);
+\path[name path = vertical1] (1, 0) -- (1, 4);
+\draw[dashed, line width=3, name intersections = {of = line1 and vertical1, by = {x4}}]  (1, 0) -- (x4);
+\node[above = -0.1 of x4] {$\V{x}^{(4)}$};
+\coordinate (c1) at (0, 1);
+\coordinate (c2) at (2, 2);
+\coordinate (x5) at ($(c1)!(C)!(c2)$);
+\draw[dashed, line width=3] (x4) -- (x5);
+\node[above = -0.1 of x5] {$\V{x}^{(5)}$};
+\draw[dashed, circle defined by=center C and point x5];
+\coordinate (midx5) at ($(C)!0.5!(x5)$);
+\draw[dashed, circle defined by=center C and point midx5];
+\coordinate (p6) at ($(C)!1.5!(x5)$);
+\draw[dashed, circle defined by=center C and point p6];
+\begin{scope}
+\clip (-.6, -.3) rectangle (2.5, 1.9);
+\coordinate (p7) at (1, 0);
+\draw[dashed, circle defined by=center C and point p7];
+\coordinate (p8) at ($(C)!0.75!(p7)$);
+\draw[dashed, circle defined by=center C and point p8];
+\end{scope}
+\end{tikzpicture}
+\caption{积极集法求解例\ref{eg:qp-active-set-algo}的迭代示意图}
+\label{fig:active-set-eg}
+\end{figure}
+
 \end{eg}
 
 \subsection*{习题}
